many fixes to orders controller

--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -108,7 +108,7 @@
 		top: 10px;
 	}
 
-	input[type="text"], input[type="number"] {
+	input[type="text"], input[type="number"], input[type="search"] {
 		padding: 10px 46px 10px 15px;
 		border: solid 2px transparent;
 		border-radius: 5px;
