--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -98,6 +98,7 @@
   html, body {
     @for $i from 1 through 12 {
       .col-sm-#{$i} {
+        margin-top: 15px;
         @include span-columns($i);
       }
     }
