--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,7 +3,8 @@
 
 	<div class="container main-container">
 		<header class="container-header">
-			<h1 class="header-title text-center m-b-50">Abertura de <span>chamado</span></h1>
+			<h1 class="header-title m-b-50 text-center">Abertura de <span>chamado</span></h1>
+			<%= params[:order] %>
 		</header>
 
 		<section class="container-body">
@@ -11,40 +12,46 @@
 	      <%= f.simple_fields_for :stuff do |s| %>
 	      	<%= f.input :user_id, as: :hidden, label: false, wrapper_html: { class: "m-t-0" } %>
 
-	      	<div class="flex-row gap-50 h-centered">
-	      		<%= content_tag :div, "", class: "flex-col flex-col-3" do %>
-      				<%= f.input :order_school, label: "Nome da unidade", collection: @schools, prompt: "Selecione a sua unidade...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+	      	<div class="row">
+	      		<%= content_tag :div, "", class: "col-3 col-md-5 col-sm-12" do %>
+      				<%= f.input :school_id, label: "Nome da unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
     				<% end if is_admin? %>
 
-	      		<div class="flex-col flex-col-3">
+	      		<div class="col-3 col-md-5 col-sm-12">
       				<%= f.input :requester, required: false, label: "Nome do(a) solicitante", label_html: { class: "form-label" } %>
 						</div>	      		
 	      	</div>
 	      		
-	      	<div class="flex-row h-centered m-t-50">
-						<div class="flex-col flex-col-10">
-			      	<p class="equipment-category text-center">Selecione a categoria do equipamento</p>
+	      	<div class="row m-t-50">
+						<div class="col-12">
+			      	<p class="equipment-category ">Selecione a categoria do equipamento</p>
 		          <%= s.input :category, label: false, as: :radio_buttons, collection: list_categories, wrapper_html: { class: "custom-radio" } %>
 						</div>	      		
 	      	</div>
 
-          <div class="flex-row gap-50 m-t-50">
-          	<div class="flex-col flex-col-4">
+          <div class="row m-t-50">
+          	<div class="col-3 col-md-4 col-sm-12">
 							<%= s.input :patrimony, required: false, label: "Nº patrimônio", label_html: { class: "form-label" } %>
-
-        			<%= s.input :brand, required: false, label: "Marca/modelo", collection: list_brands, prompt: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-
-        			<%= f.input :spot, required: false, label: "Local de instalação", collection: list_spots, prompt: "Selecione o local de instalação...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
           	</div>
 
-          	<div class="flex-col flex-col-8">
+          	<div class="col-3 col-md-4 col-sm-12">
+        			<%= s.input :brand, required: false, label: "Marca/modelo", collection: list_brands, include_blank: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+          	</div>
+
+          	<div class="col-3 col-md-4 col-sm-12">
+        			<%= f.input :spot, required: false, label: "Local de instalação", collection: list_spots, include_blank: "Selecione o local de instalação...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+          	</div>
+        	</div>
+
+          <div class="row m-t-50">
+          	<div class="col-6 col-md-12">
           		<%= f.input :defect, required: false, label: "Defeito apresentado", as: :text, label_html: { class: "form-label" } %>
           	</div>
           </div>
 
 	        <div class="actions m-t-50">
 	          <%= f.submit "Finalizar", data: { disable_with: "Aguarde..." }, class: "btn-success" %>
-	          <%= link_to "Voltar", :back, class: "btn-cancel" %>
+	          <%= link_to "Voltar", orders_path, class: "btn-cancel" %>
 	        </div>
 	      <% end %>
 	    <% end %>
