--- a/app/assets/stylesheets/core/_buttons.scss
+++ b/app/assets/stylesheets/core/_buttons.scss
@@ -17,7 +17,7 @@
   @include prefix(box-shadow, 0 10px 10px rgba(0, 0, 0, 0.1));
   @include prefix(transition, all 250ms);
   background-clip: padding-box;
-
+  
   &:hover, &:focus {
     text-decoration: none;
   }
@@ -65,7 +65,6 @@
 }
 
 .btn-cancel {
-  color: $primary-color;
   background-color: $grey;
 }
 
@@ -84,10 +83,22 @@
   height: 40px;
   padding: 0;
   border-radius: 50%;
+  overflow: hidden;
+  position: relative;
 
   img {
     width: 16px;
     height: 16px;
+  }
+
+  &:before {
+    content: "";
+    width: 100%;
+    height: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
   }
 }
 
