--- a/app/views/orders/_order_card.html.erb
+++ b/app/views/orders/_order_card.html.erb
@@ -5,7 +5,7 @@
 		<div class="order-cards">
 			<% orders.each do |order| %>
 				<%= content_tag :div, class: "order-card #{get_status(order.status)}" do %>
-					<%= link_to "", edit_order_path(order), title: order.defect, class: "order-card-link" %>
+					<%= link_to "", order_path(order), title: "Clique para ver detalhes", class: "order-card-link" %>
 
 					<header class="order-card-header">
 						<div class="left-content">
@@ -24,11 +24,11 @@
 					</div>
 
 					<%= content_tag :footer, class: "order-card-footer" do %>
-						<%= content_tag :span, order_creator(order.order_school) if is_admin? %>
+						<%= content_tag :span, order.school_name if is_admin? %>
 						<div class="options">
 							<%= link_to image_tag("icons/dots-v.svg"), "#", class: "options-btn" %>
 							<ul>
-								<li><%= link_to "Ver detalhes", order_path(order) %></li>
+								<li><%= link_to "Editar", edit_order_path(order) %></li>
 								<li><%= link_to "Cancelar chamado", destroy_order_path(order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." } %></li>
 							</ul>
 						</div>
