--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -19,15 +19,15 @@
 
 			<%= simple_form_for @order, url: edit_order_path, html: { class: "form" } do |f| %>
 	      <%= f.simple_fields_for :stuff do |s| %>
-	      	<div class="flex-row order-info m-b-5">
-	      		<div class="flex-col flex-col-6 order-id">
+	      	<div class="row order-info m-b-5">
+	      		<div class="col-6 order-id">
 	      			<%= content_tag :h6 do %>
 	      				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
-	      				<%= content_tag :span, " - #{order_creator(@order.order_school)}" if is_admin? %>
+	      				<%= content_tag :span, " - #{@order.school.name}" if is_admin? %>
 	      			<% end %>
 	      		</div>
 
-	      		<div class="flex-col flex-col-6 text-right updated-at">
+	      		<div class="col-6 text-right updated-at">
 	      			<%= content_tag :span, order_updated_at(@order.updated_at, @order.updated_by) %>
 	      		</div>
 	      	</div>
@@ -37,33 +37,39 @@
 		      		<%= f.input :user_id, as: :hidden, label: false, wrapper_html: { class: "m-t-0" } %>
 
 		      		<section class="bordered">
-				      	<div class="flex-row h-centered text-center">
-				      		<div class="flex-col flex-col-4 h-centered">
-			      				<%= f.input :requester, required: false, label: "Nome do(a) solicitante", label_html: { class: "form-label" }, input_html: { class: "text-center" } %>
+				      	<div class="row">
+				      		<div class="col-3 col-md-5 col-sm-12">
+			      				<%= f.input :requester, required: false, label: "Nome do(a) solicitante", label_html: { class: "form-label" } %>
 									</div>	      		
 				      	</div>
 		      		</section>
 				      		
 		      		<section class="bordered">
-				      	<div class="flex-row h-centered">
-									<div class="flex-col flex-col-10">
-						      	<p class="equipment-category text-center"><%= @stuff_category %></p>
+				      	<div class="row">
+									<div class="col-12">
+						      	<p class="equipment-category"><%= @stuff_category %></p>
 					          <%= s.input :category, label: false, as: :radio_buttons, collection: list_categories, wrapper_html: { class: "custom-radio" } %>
 									</div>	      		
 				      	</div>
 		      		</section>
 
 		      		<section class="bordered">
-			          <div class="flex-row gap-50">
-			          	<div class="flex-col flex-col-4">
+			          <div class="row">
+			          	<div class="col-3 col-md-4 col-sm-12">
 										<%= s.input :patrimony, required: false, label: "Nº patrimônio", label_html: { class: "form-label" } %>
-
-			        			<%= s.input :brand, required: false, label: "Marca/modelo", collection: list_brands, prompt: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-
-			        			<%= f.input :spot, required: false, label: "Local de instalação", collection: list_spots, prompt: "Selecione o local de instalação...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
 			          	</div>
 
-			          	<div class="flex-col flex-col-8">
+			          	<div class="col-3 col-md-4 col-sm-12">
+			        			<%= s.input :brand, required: false, label: "Marca/modelo", collection: list_brands, include_blank: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+			          	</div>
+
+			          	<div class="col-3 col-md-4 col-sm-12">
+			        			<%= f.input :spot, required: false, label: "Local de instalação", collection: list_spots, include_blank: "Selecione o local de instalação...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+			          	</div>
+		          	</div>
+
+			          <div class="row m-t-50">
+			          	<div class="col-6 col-md-12">
 			          		<%= f.input :defect, required: false, label: "Defeito apresentado", as: :text, label_html: { class: "form-label" } %>
 			          	</div>
 			          </div>
@@ -74,49 +80,52 @@
     			<fieldset <%= "disabled=disabled" if !is_admin? %>>
 	    			<div id="admin-data" class="order-data <%= 'current' if is_admin?%>">
 				    	<section class="bordered">
-				      	<div class="flex-row">
-					      		<div class="flex-col flex-col-12 flex-inline">
-					      			<%= f.input :status, required: false, label: "Status", collection: list_status, prompt: "Selecione o status...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-r-50" } %>
+				      	<div class="row">
+				      		<div class="col-4 col-md-6 col-sm-12">
+				      			<%= f.input :status, required: false, label: "Status", collection: list_status, include_blank: "Selecione o status...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-r-50" } %>
+									</div>	      		
+								</div>	      		
 
-					      			<% if Stuff.find(@order.stuff_id).category == "PC/Notebook" %>
-					      				<%= f.input :backup, required: false, label: "Necessário backup?", as: :radio_buttons, collection: ['Sim', 'Não'], wrapper_html: { class: "boolean m-t-0" } %>
-											<% end %>
-										</div>	      		
+				      	<div class="row m-t-50">
+		      				<div class="col-4 col-md-6 col-sm-12">
+				      			<% if Stuff.find(@order.stuff_id).category == "PC/Notebook" %>
+				      				<%= f.input :backup, required: false, label: "Necessário backup?", as: :radio_buttons, collection: ['Sim', 'Não'], wrapper_html: { class: "boolean m-t-0" } %>
+										<% end %>
+									</div>	      		
 				      	</div>
 		      		</section>
 
 		      		<section class="bordered">
-				      	<div class="flex-row gap-25">
-				      		<div class="flex-col flex-col-8">
+				      	<div class="row">
+				      		<div class="col-8 col-md-6 col-sm-12">
 			          		<%= f.input :performed_service, required: false, label: "Serviço realizado", as: :text, label_html: { class: "form-label" } %>
 			          	</div>     		
 
-									<div class="flex-col flex-col-4">
+									<div class="col-4 col-md-6 col-sm-12">
 			          		<%= f.input :obs, required: false, label: "Observações", as: :text, label_html: { class: "form-label" } %>
 			          	</div>    
 				      	</div>
 		      		</section>
 
 		      		<section class="bordered">
-				      	<div class="flex-row gap-25">
-				      		<div class="flex-col flex-col-2">
-				      			<h4 class="uppercase">Técnico responsável</h4>
+		      			<h3 class="uppercase m-b-25 highlight">Técnico responsável</h3>
+
+				      	<div class="row">
+				      		<div class="col-4 col-md-6 col-sm-12">
+			          		<%= f.input :removal_technician, required: false, label: "Retirada", collection: @technicians, include_blank: "Quem retirou o equipamento?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-r-15" } %>
 									</div>   		
 
-									<div class="flex-col flex-col-10 flex-inline">
-			          		<%= f.input :removal_technician, required: false, label: "Retirada", collection: @technicians, prompt: "Quem retirou o equipamento?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-r-15" } %>
-										<%= f.input :maintenance_technician, required: false, label: "Manutenção", collection: @technicians, prompt: "Quem realizou o serviço?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-t-0" } %>
+									<div class="col-4 col-md-6 col-sm-12">
+										<%= f.input :maintenance_technician, required: false, label: "Manutenção", collection: @technicians, include_blank: "Quem realizou o serviço?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-t-0" } %>
 			          	</div>   
 				      	</div>
 		      		</section>
 
 		      		<section class="bordered">
-				      	<div class="flex-row gap-25">
-			          	<div class="flex-col flex-col-2">
-			          		<h4 class="uppercase">Data</h4>
-									</div> 
+	          		<h4 class="uppercase m-b-25 highlight">Data</h4>
 
-									<div class="flex-col flex-col-10 flex-inline">
+				      	<div class="flex-row">
+			          	<div class="flex-col flex-col-12 flex-inline">
 										<%= f.input :start_date, required: false, html5: true, label: "Retirada", label_html: { class: "form-label" }, wrapper_html: { class: "m-r-15" } %>
 										<%= f.input :end_date, required: false, html5: true, label: "Entrega", label_html: { class: "form-label" }, wrapper_html: { class: "m-t-0" } %>
 									</div>
@@ -128,7 +137,7 @@
 	    		<% if is_admin? || @order.status == "Em aberto" %>
 		        <div class="actions m-t-25">
 		          <%= f.submit "Atualizar dados", data: { disable_with: "Aguarde..." }, class: "btn-success" %>
-		          <%= link_to "Voltar", :back, class: "btn-cancel" %>
+		          <%= link_to "Voltar", orders_path, class: "btn-cancel" %>
 		          <%= link_to "Cancelar chamado", destroy_order_path(@order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-alert" %>
 		        </div>
 		      <% else %>
