--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -94,8 +94,8 @@
 
 			.order-cards {
 				display: grid;
-				grid-gap: 25px;
-				grid-template-columns: minmax(300px, 400px) minmax(300px, 400px) minmax(300px, 400px) minmax(300px, 400px) minmax(300px, 400px);
+				grid-gap: 15px;
+				grid-template-columns: 1fr 1fr 1fr 1fr;
 
 				&.as-list {
 					grid-template-columns: 1fr;
