added school id to stuffs and autocomplete field for patrimony (orders new/create)

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -4,8 +4,9 @@
 	<div class="container main-container">
 		<header class="container-header">
 			<h1 class="header-title m-b-50 text-center">Abertura de <span>chamado</span></h1>
-			<%#= params[:order] %>
 		</header>
+
+  	<%= flash_message %>
 
 		<section class="container-body">
 			<%= simple_form_for @order, url: new_order_path, html: { class: "form" } do |f| %>
@@ -33,7 +34,10 @@
 
           <div class="row m-t-50">
           	<div class="col-3 col-md-4 col-sm-12">
-							<%= s.input :patrimony, required: false, label: "Nº patrimônio", label_html: { class: "form-label" } %>
+          		<div class="input string" id="autocomplete-patrimony">
+          			<label for="order[stuff_attributes][patrimony]" class="form-label">Nº patrimônio</label>
+								<%= autocomplete_field_tag "order[stuff_attributes][patrimony]", @patrimony, autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio", append_to: "#autocomplete-patrimony", 'data-noMatchesLabel' => "Patrimônio não encontrado", maxlength: 6 %>
+							</div>
           	</div>
 
           	<div class="col-3 col-md-4 col-sm-12">
